--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     },
     "dependencies": {
         "@fortawesome/fontawesome-free": "^5.15.3",
-        "font-awesome": "^4.7.0"
+        "font-awesome": "^4.7.0",
+        "jquery-confirm": "^3.3.4"
     }
 }
